# openmc_sdef_parser

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: sdef_parse.ipynb
notebooks/data/: sdef_template.i
openmc_sdef_parser/: __init__.py  openmc_source.py  parse.py
tests/: test_source.py
